fix(): fixed max width of filename to prevent overlapping

--- a/styles/iom.css
+++ b/styles/iom.css
@@ -57,7 +57,7 @@ body {
 }
 
 .fileNameTitle {
-	margin-left: 5px;
+	margin-left: 8px;
 }
 
 .fileSizePropertiesDiv {
@@ -112,10 +112,11 @@ ul {
 }
 
 .fileName {
+	position: absolute;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	max-width: 60%;
+	max-width: 50%;
 }
 
 .footer {
